fixed generate loading place holder on mobile and priamry navbar responsiveness on mobile

--- a/src/common/components/PrimaryNavbar.scss
+++ b/src/common/components/PrimaryNavbar.scss
@@ -27,7 +27,7 @@ nav {
     width: 105px;
     height: auto;
     @media (max-width: 480px) {
-      width: 90px;
+      width:70px;
     }
   }
 }
@@ -48,6 +48,9 @@ nav {
   width: 45px;
   vertical-align: middle;
   margin-left: 1rem;
+  @media (max-width: 480px) {
+    width: 25px;
+  }
 }
 
 .sign-out {
@@ -68,6 +71,14 @@ nav {
   @media (max-width: 480px) {
     padding-left: 5px;
     float: right;
+  }
+}
+
+.profile-name{
+  color:#505050;
+  font-size:16px;
+  @media (max-width: 480px) {
+    font-size:12px;
   }
 }
 
