--- a/src/pages/Home/Generate/generate.scss
+++ b/src/pages/Home/Generate/generate.scss
@@ -195,3 +195,16 @@
     
   }
 }
+
+.mobile-loader{
+  img{
+    padding: 2%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-height: 500px;
+  border-radius: 2rem;
+  }
+  
+}
